feat: API RESTful niveau 3 - HATEOAS, versionning v1, erreurs structurees, Cache-Control